force-app/main/default/objects/Sales_Comp_Product__c/Sales_Comp_Product__c.object-meta.xml
<CustomObject>
    <description>Stores product and service line items included in a sales compensation transaction.</description>
    <label>Sales Compensation Product</label>
    <nameField>
        <displayFormat>SCP-{000000}</displayFormat>
        <label>Product Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Compensation Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>