force-app/main/default/objects/Sales_Comp_Product__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <label>Compensation</label>
    <referenceTo>Sales_Compensation__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>MasterDetail</type>
</CustomField>