force-app/main/default/objects/Sales_Comp_Product__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>